guard de cookies y registro funcionando (con posible cambio de estructura)

--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,8 @@ __screenshots__/
 # System files
 .DS_Store
 Thumbs.db
+
+#MODIFICACIONES
+#QUITAR EL PROXY DE ESTE ARCHIVO angular.json
+#ELIMINAR DESPUES ESTE ARCHIVO proxy.conf.json
+QUITARESTO.txt
