--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
     "@angular/forms": "^20.3.0",
     "@angular/platform-browser": "^20.3.0",
     "@angular/router": "^20.3.0",
+    "apexcharts": "^5.3.6",
+    "chart.js": "^4.5.1",
+    "ng-apexcharts": "^2.0.3",
     "ngx-cookie-service": "^20.1.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
